--- a/sellandbuy/src/templates/index.ejs
+++ b/sellandbuy/src/templates/index.ejs
@@ -28,23 +28,13 @@
           class="w-full flex items-center justify-between sm:pt-4 sm:pb-0 px-2 sm:px-5 pt-5 pb-5"
         >
           <div id="left-part" class="sm:w-1/3 flex justify-start">
-            <div id="button" class="hidden sm:flex flex-row items-center">
-              <div id="srvc-button" class="flex">
-                <a
-                  href="#"
-                  class="flex w-btn border-2 border-slate-700 rounded-md items-center justify-center bg-black px-3.5 py-2 text-sm font-semibold text-white shadow-sm hover:bg-slate-600 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-red-700"
-                  >JASA</a
-                >
-              </div>
-              <h1 id="divider" class="mx-2 text-2xl">|</h1>
-              <div id="stff-button" class="flex">
-                <a
-                  href="public/market.html"
-                  class="flex w-btn border-2 border-black rounded-md items-center justify-center bg-white px-3.5 py-2 text-sm font-semibold text-black shadow-sm hover:bg-slate-200 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-black"
-                  >BARANG</a
-                >
-              </div>
-            </div>
+            <a
+              id="user"
+              href="#"
+              class="flex w-10 h-10 rounded-full items-center justify-center shadow-sm hover:bg-slate-200 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-red-700"
+            >
+              <img class="w-btn-pfl" src="images/user.png" />
+            </a>
           </div>
           <a
             href="public/index.html"
@@ -97,20 +87,6 @@
                 name="search"
               />
             </div>
-            <a
-              id="cart"
-              href="#"
-              class="flex w-10 h-10 rounded-full items-center justify-center shadow-sm hover:bg-slate-200 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-red-700"
-            >
-              <img class="w-btn-pfl" src="images/cart.png" />
-            </a>
-            <a
-              id="user"
-              href="#"
-              class="flex w-10 h-10 rounded-full items-center justify-center shadow-sm hover:bg-slate-200 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-red-700"
-            >
-              <img class="w-btn-pfl" src="images/user.png" />
-            </a>
           </div>
           <div id="slider" class="flex sm:hidden justify-end items-center">
             <a id="menu" href="#">
@@ -123,7 +99,7 @@
               >
                 <path
                   d="M120-240v-80h720v80H120Zm0-200v-80h720v80H120Zm0-200v-80h720v80H120Z"
-                />
+                ></path>
               </svg>
             </a>
           </div>
@@ -160,22 +136,6 @@
               type="text"
               name="search"
             />
-          </div>
-          <div
-            id="ctg"
-            class="w-full hidden sm:flex flex-row items-center justify-center text-black font-saira text-[15px]"
-          >
-            <a href="#" class="leading-6">PAKAIAN & AKSESORIS</a>
-            <h1 id="divider" class="mx-3 text-sm">|</h1>
-            <a href="#" class="leading-6">OTOMOTIF</a>
-            <h1 id="divider" class="mx-3 text-sm">|</h1>
-            <a href="#" class="leading-6">ELEKTRONIK</a>
-            <h1 id="divider" class="mx-3 text-l">|</h1>
-            <a href="#" class="hidden sm:flex leading-6">PROPERTI</a>
-            <h1 id="divider" class="mx-3 text-sm">|</h1>
-            <a href="#" class="leading-6">PERALATAN RUMAH TANGGA</a>
-            <h1 id="divider" class="mx-3 text-sm">|</h1>
-            <a href="#" class="leading-6">LAINNYA</a>
           </div>
         </div>
       </header>
@@ -304,5 +264,6 @@
         </div>
       </div>
     </footer>
+    <script src="js/script.js"></script>
   </body>
 </html>
