--- a/sellandbuy/src/templates/index.ejs
+++ b/sellandbuy/src/templates/index.ejs
@@ -37,7 +37,7 @@
             </a>
           </div>
           <a
-            href="public/index.html"
+            href="/"
             id="navbar-logo"
             class="w-auto sm:w-1/3 flex items-center justify-center"
           >
@@ -142,53 +142,61 @@
     </div>
 
     <div id="content" class="w-full flex flex-col align-middle justify-center">
-      <div id="banner" class="banner">
+      <div id="banner" class="banner mb-4">
         <img
           class="size-full"
           src="images/produk-pakaian1.png"
           alt="product"
           id="prd"
         />
-        <a href="#" id="caption" class="caption">
-          <h1 class="title-h1">Kemeja Pria</h1>
-          <p class="med-p">Kemeja pria dengan bahan berkualitas</p>
-        </a>
+        <div class="overlay flex flex-col items-center justify-center">
+          <h2 class="text-2xl font-semibold">Kemeja Pria</h2>
+          <div class="divider"></div>
+          <p class="text-lg">Rp. 200.000</p>
+          <a href="#" class="mt-4 button-custom">Lihat Produk</a>
+        </div>
       </div>
-      <div id="banner1" class="banner">
+      <div id="banner1" class="banner mb-4">
         <img
           class="size-full"
           src="images/produk-aksesoris1.png"
           alt="product"
           id="prd1"
         />
-        <a href="#" id="caption1" class="caption">
-          <h1 class="title-h1">Tas Wanita</h1>
-          <p class="med-p">Tas wanita dengan desain elegan</p>
-        </a>
+        <div class="overlay flex flex-col items-center justify-center">
+          <h2 class="text-2xl font-semibold">Tas Wanita</h2>
+          <div class="divider"></div>
+          <p class="text-lg">Rp. 200.000</p>
+          <a href="#" class="mt-4 button-custom">Lihat Produk</a>
+        </div>
       </div>
-      <div id="banner2" class="banner">
+      <div id="banner2" class="banner mb-4">
         <img
           class="size-full"
           src="images/produk-sepatu-olahraga1.png"
           alt="product"
           id="prd2"
         />
-        <a href="#" id="caption2" class="caption">
-          <h1 class="title-h1">Sepatu</h1>
-          <p class="med-p">Sepatu olahraga dengan kualitas terbaik</p>
-        </a>
+        <div class="overlay flex flex-col items-center justify-center">
+          <h2 class="text-2xl font-semibold">Sepatu Lari</h2>
+          <div class="divider"></div>
+          <p class="text-lg">Rp. 200.000</p>
+          <a href="#" class="mt-4 button-custom">Lihat Produk</a>
+        </div>
       </div>
-      <div id="banner3" class="banner">
+      <div id="banner3" class="banner mb-4">
         <img
           class="size-full"
           src="images/produk-otomotif1.png"
           alt="product"
           id="prd3"
         />
-        <a href="#" id="caption3" class="caption">
-          <h1 class="title-h1">BMW 320i</h1>
-          <p class="med-p">Mobil BMW 320i dengan kondisi terbaik</p>
-        </a>
+        <div class="overlay flex flex-col items-center justify-center">
+          <h2 class="text-2xl font-semibold">Kendaraan</h2>
+          <div class="divider"></div>
+          <p class="text-lg">Rp. 200.000</p>
+          <a href="#" class="mt-4 button-custom">Lihat Produk</a>
+        </div>
       </div>
     </div>
 
