--- a/sellandbuy/src/templates/landing-page/index.ejs
+++ b/sellandbuy/src/templates/landing-page/index.ejs
@@ -220,11 +220,11 @@
               id="cstmr-srvc"
               class="w-fit flex flex-row items-center justify-start"
             >
-              <a href="#" class="leading-6">FAQ</a>
+              <a href="/faq" class="leading-6">FAQ</a>
               <h1 id="divider" class="mx-3 text-sm">|</h1>
-              <a href="#" class="leading-6">Privacy Policy</a>
+              <a href="/privacy" class="leading-6">Privacy Policy</a>
               <h1 id="divider" class="mx-3 text-sm">|</h1>
-              <a href="#" class="leading-6">Terms & Condition</a>
+              <a href="/tos" class="leading-6">Terms & Condition</a>
             </div>
             <div id="c-right" class="w-auto flex justify-end items-center">
               <h1>CopyRight © 2024 Sell&Buy</h1>
