--- a/sellandbuy/src/templates/landing-page/index.ejs
+++ b/sellandbuy/src/templates/landing-page/index.ejs
@@ -30,7 +30,7 @@
           <div id="left-part" class="sm:w-1/3 flex justify-start">
             <a
               id="user"
-              href="#"
+              href="/login"
               class="flex w-10 h-10 rounded-full items-center justify-center shadow-sm hover:bg-slate-200 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-red-700"
             >
               <img class="w-btn-pfl" src="images/user.png" />
