--- a/sellandbuy/src/templates/login/register.ejs
+++ b/sellandbuy/src/templates/login/register.ejs
@@ -177,6 +177,17 @@
               Sign Up
             </button>
           </div>
+          <p class="text-center text-gray-700">
+            Dengan ini saya menyetujui semua
+            <a href="/tos" class="text-blue-500 hover:underline"
+              >Syarat & Ketentuan</a
+            >
+            serta
+            <a href="/privacy" class="text-blue-500 hover:underline"
+              >Kebijakan Privasi</a
+            >
+            Sell&Buy.
+          </p>
         </form>
       </section>
       <div class="hidden sm:block sm:w-1/2">
