--- a/sellandbuy/src/templates/login/register.ejs
+++ b/sellandbuy/src/templates/login/register.ejs
@@ -70,7 +70,17 @@
           Already have an account?
           <a href="/login" class="text-blue-500 hover:underline">Sign in</a>
         </p>
-        <form class="max-w-md mx-auto" id="register-form">
+        <% if (error.length > 0) { %>
+        <div class="bg-red-500 text-white text-center py-2 rounded mb-4">
+          <%= error[0] %>
+        </div>
+        <% } %>
+        <form
+          class="max-w-md mx-auto"
+          id="register-form"
+          action="/register"
+          method="POST"
+        >
           <div class="mb-4">
             <label for="username" class="block text-gray-700"
               >Nama Pengguna</label
@@ -78,6 +88,7 @@
             <input
               type="text"
               id="username"
+              name="username"
               class="w-full px-4 py-2 border rounded-lg focus:outline-none focus:ring-2 focus:ring-gray-400"
               placeholder="Jono Khidrul Badri"
               required
@@ -90,6 +101,7 @@
             <input
               type="email"
               id="email"
+              name="email"
               class="w-full px-4 py-2 border rounded-lg focus:outline-none focus:ring-2 focus:ring-gray-400"
               placeholder="example@gmail.com"
               required
@@ -102,6 +114,7 @@
             <input
               type="password"
               id="password"
+              name="password"
               class="w-full px-4 py-2 border rounded-lg focus:outline-none focus:ring-2 focus:ring-gray-400"
               placeholder="**********"
               required
@@ -113,7 +126,8 @@
             >
             <input
               type="password"
-              id="confirm-password"
+              id="confirm_password"
+              name="confirm_password"
               class="w-full px-4 py-2 border rounded-lg focus:outline-none focus:ring-2 focus:ring-gray-400"
               placeholder="**********"
               required
@@ -126,6 +140,7 @@
             <input
               type="text"
               id="phone"
+              name="phone"
               class="w-full px-4 py-2 border rounded-lg focus:outline-none focus:ring-2 focus:ring-gray-400"
               placeholder="08xx"
               required
@@ -138,6 +153,7 @@
             <input
               type="text"
               id="address"
+              name="address"
               class="w-full px-4 py-2 border rounded-lg focus:outline-none focus:ring-2 focus:ring-gray-400"
               placeholder="Jl.Melati xxx"
               required
@@ -150,6 +166,7 @@
             <input
               type="text"
               id="birthdate"
+              name="birthdate"
               class="w-full px-4 py-2 border rounded-lg focus:outline-none focus:ring-2 focus:ring-gray-400"
               placeholder="xx/xx/xxxx"
               required
