--- a/sellandbuy/src/templates/login/forgot-password.ejs
+++ b/sellandbuy/src/templates/login/forgot-password.ejs
@@ -69,7 +69,19 @@
         <p class="text-center mb-4">
           Masukkan email yang terdaftar untuk menerima tautan reset password.
         </p>
-        <form class="max-w-md mx-auto" id="request-reset-form">
+
+        <% if (success && success.length > 0) { %>
+        <div class="mb-4 text-center text-green-500"><%= success %></div>
+        <% } %> <% if (error && error.length > 0) { %>
+        <div class="mb-4 text-center text-red-500"><%= error %></div>
+        <% } %>
+
+        <form
+          class="max-w-md mx-auto"
+          id="request-reset-form"
+          action="/forgot-password"
+          method="post"
+        >
           <div class="mb-4">
             <label for="email" class="block text-gray-700"
               >Email Pengguna</label
@@ -77,6 +89,7 @@
             <input
               type="email"
               id="email"
+              name="email"
               class="w-full px-4 py-2 border rounded-lg focus:outline-none focus:ring-2 focus:ring-gray-400"
               placeholder="example@gmail.com"
               required
