--- a/sellandbuy/src/templates/login/login.ejs
+++ b/sellandbuy/src/templates/login/login.ejs
@@ -75,7 +75,8 @@
         <% } %>
         <p class="text-center mb-4">Login using social networks</p>
         <div class="flex justify-center mb-6">
-          <button
+          <a
+            href="/auth/google"
             class="bg-white border rounded-full px-6 py-2 shadow-md flex items-center"
           >
             <svg
@@ -101,7 +102,7 @@
               />
             </svg>
             <span>Sign in with Google</span>
-          </button>
+          </a>
         </div>
         <p class="text-center mb-4">or</p>
         <form class="max-w-md mx-auto" action="/login" method="POST">
