--- a/sellandbuy/src/templates/profile/profil-pengguna.ejs
+++ b/sellandbuy/src/templates/profile/profil-pengguna.ejs
@@ -151,12 +151,25 @@
       id="content"
       class="flex-grow w-full flex flex-col align-middle justify-center mt-[101.2px] sm:mt-[96px] mb-10 relative"
     >
+
+    <!-- Header Section -->
       <section class="profile-section w-full sm:w-1/2 max-w-5xl mx-auto p-8">
-        <h1 class="text-3xl font-bold text-center mt-8">Profil Pengguna</h1>
+        <div class="flex items-end">
+          <div class="flex-initial">
+            <h1 class="text-3xl font-bold text-left mt-12 mb-4" style="width: 13.2rem;">Profil Pengguna</h1>
+          </div>
+
+          <div>
+            <h1 class="text-black text-xl mt-12 mb-4">Basic</h1>
+          </div>
+        </div>
+        <hr class="h-px bg-black border-0 dark:bg-gray-700">
+
+        <!-- Profile Info -->
         <div class="profile-info flex flex-row mt-8">
           <div class="profile-picture text-center mr-8">
             <img
-              class="rounded-full h-32 w-32"
+              class="rounded-full h-auto w-auto"
               src="images/user.png"
               alt="User Picture"
             />
