--- a/sellandbuy/src/templates/landing-page/index.ejs
+++ b/sellandbuy/src/templates/landing-page/index.ejs
@@ -15,10 +15,11 @@
       href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0"
     />
     <link rel="stylesheet" href="css/style.css" />
-    <link rel="stylesheet" href="css/landing-page.css">
+    <link rel="stylesheet" href="css/navbar.css">
     <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
   </head>
   <body class="pt-[101.2px] sm:pt-[96px] font-saira">
+    <!-- navbar -->
     <div id="nav-wrp">
       <header
         id="navbar"
@@ -28,6 +29,8 @@
           id="top-nav"
           class="w-full flex items-center justify-between sm:pt-4 sm:pb-0 px-2 sm:px-5 pt-5 pb-5"
         >
+
+        <!-- Profile Nav -->
         <div id="left-part" class="sm:w-1/3 flex justify-start">
           <div class="relative inline-block text-left">
             <div>
@@ -50,14 +53,17 @@
               id="menu"
             >
               <div class="py-1" role="none">
-                <button class="block px-4 py-2 text-sm text-gray-700 cursor-pointer" role="menuitem" tabindex="-1" id="menu-item-0" onclick="location.href = '/profile'">Profile</button>
+                <button class="block w-full px-4 py-2 text-left text-sm text-gray-700 cursor-pointer" role="menuitem" tabindex="-1" id="menu-item-0" onclick="location.href = '/profile'">Profile</button>
+                <button class="block w-full px-4 py-2 text-left text-sm text-gray-700 cursor-pointer" role="menuitem" tabindex="-1" id="menu-item-0" onclick="location.href = '/membership'">Jadi Member</button>
                 <form method="POST" action="#" role="none">
                   <button type="submit" class="w-full px-4 py-2 text-left text-sm text-gray-700 cursor-pointer" role="menuitem" tabindex="-1" id="menu-item-1">Logout</button>
                 </form>
               </div>
             </div>
           </div>
-        </div>              
+        </div>
+        
+        <!-- Logo Nav -->
           <a
             href="/"
             id="navbar-logo"
@@ -132,6 +138,8 @@
             </a>
           </div>
         </div>
+
+        <!-- Right Nav -->
         <div
           id="bot-nav"
           class="w-full flex items-center justify-center pt-2 pb-4 sm:px-[20px]"
@@ -169,6 +177,7 @@
       </header>
     </div>
 
+    <!-- Content -->
     <div id="content" class="w-full flex flex-col align-middle justify-center">
       <div id="banner" class="banner mb-4">
         <img
@@ -181,7 +190,7 @@
           <h2 class="text-2xl font-semibold">Kemeja Pria</h2>
           <div class="divider"></div>
           <p class="text-lg">Rp. 200.000</p>
-          <a href="#" class="mt-4 button-custom">Lihat Produk</a>
+          <a href="/detail-item" class="mt-4 button-custom">Lihat Produk</a>
         </div>
       </div>
       <div id="banner1" class="banner mb-4">
@@ -195,7 +204,7 @@
           <h2 class="text-2xl font-semibold">Tas Wanita</h2>
           <div class="divider"></div>
           <p class="text-lg">Rp. 200.000</p>
-          <a href="#" class="mt-4 button-custom">Lihat Produk</a>
+          <a href="/membership" class="mt-4 button-custom">Lihat Produk</a>
         </div>
       </div>
       <div id="banner2" class="banner mb-4">
@@ -228,6 +237,7 @@
       </div>
     </div>
 
+    <!-- Footer -->
     <footer>
       <div id="ftr-wrp">
         <div
@@ -300,8 +310,10 @@
         </div>
       </div>
     </footer>
-    <script src="js/script.js"></script>
 
+
+    <!-- Script -->
+    <script src="js/script.js"></script>
     <script>
       document.addEventListener('DOMContentLoaded', () => {
         function toggleMenu(event) {
@@ -322,13 +334,6 @@
             menuButton.setAttribute('aria-expanded', 'false');
           }
         });
-      
-        const profileLink = document.getElementById('menu-item-0');
-        if (profileLink) {
-          profileLink.addEventListener('click', () => {
-            console.log('Profile link clicked');
-          });
-        }
       });    
   </script>
   </body>
