--- a/sellandbuy/src/templates/market/detail-item.ejs
+++ b/sellandbuy/src/templates/market/detail-item.ejs
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Your Favorite E-Commerce - Sell and Buy</title>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Sell & Buy - Item Details</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -11,16 +11,16 @@
       rel="stylesheet"
     />
     <link
+      href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css"
       rel="stylesheet"
-      href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0"
     />
     <link rel="stylesheet" href="css/style.css" />
     <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
   </head>
-  <body class="pt-[101.2px] sm:pt-[96px] font-saira">
+  <body class="min-h-screen flex flex-col font-saira">
 
     <!-- Navbar -->
-    <div id="nav-wrp">
+    <div id="nav-wrp" class="mb-20">
       <header
         id="navbar"
         class="bg-white fixed flex items-center justify-center flex-col inset-x-0 top-0 z-50"
@@ -29,14 +29,12 @@
           id="top-nav"
           class="w-full flex items-center justify-between sm:pt-4 sm:pb-0 px-2 sm:px-5 pt-5 pb-5"
         >
-
-        <!-- Left Nav   -->
         <div id="left-part" class="sm:w-1/3 flex justify-start">
           <div class="relative inline-block text-left">
             <div>
               <button
                 type="button"
-                class="inline-flex w-full justify-center gap-x-1.5 rounded-md bg-white px-3 py-2 shadow-sm border-black hover:bg-slate-400"
+                class="inline-flex w-full justify-center gap-x-1.5 rounded-md bg-white px-3 py-2 text-sm font-semibold text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 hover:bg-gray-200 transition delay-100"
                 id="menu-button"
                 aria-expanded="false"
                 aria-haspopup="true"
@@ -45,7 +43,7 @@
               </button>
             </div>
             <div
-              class="absolute left-0 right-0 z-10 mt-2 min-w-max origin-top-right rounded-md bg-white shadow-lg ring-1 ring-black ring-opacity-5 focus:outline-none hidden transition-all duration-300 ease-in-out"
+              class="absolute left-0 right-0 z-10 mt-2 w-56 origin-top-right rounded-md bg-white shadow-lg ring-1 ring-black ring-opacity-5 focus:outline-none hidden transition-all duration-300 ease-in-out"
               role="menu"
               aria-orientation="vertical"
               aria-labelledby="menu-button"
@@ -53,7 +51,8 @@
               id="menu"
             >
               <div class="py-1" role="none">
-                <button class="block px-4 py-2 text-sm text-gray-700 cursor-pointer" role="menuitem" tabindex="-1" id="menu-item-0" onclick="location.href = '/profile'">Profile</button>
+                <button class="block w-full px-4 py-2 text-sm text-left text-gray-700 cursor-pointer" role="menuitem" tabindex="-1" id="menu-item-0" onclick="location.href = '/profile'">Profile</button>
+                <button class="block w-full px-4 py-2 text-left text-sm text-gray-700 cursor-pointer" role="menuitem" tabindex="-1" id="menu-item-0" onclick="location.href = '/membership'">Jadi Member</button>
                 <form method="POST" action="#" role="none">
                   <button type="submit" class="w-full px-4 py-2 text-left text-sm text-gray-700 cursor-pointer" role="menuitem" tabindex="-1" id="menu-item-1">Logout</button>
                 </form>
@@ -61,8 +60,6 @@
             </div>
           </div>
         </div>
-        
-        <!-- Nav Logo -->
           <a
             href="/"
             id="navbar-logo"
@@ -137,8 +134,6 @@
             </a>
           </div>
         </div>
-
-        <!-- Right Nav -->
         <div
           id="bot-nav"
           class="w-full flex items-center justify-center pt-2 pb-4 sm:px-[20px]"
@@ -177,42 +172,198 @@
     </div>
 
     <!-- Content -->
-    <div id="content" class="w-full flex flex-col align-middle justify-center">
-    
-    </div>
+    <div
+      id="content"
+      class="flex-grow w-full mt-[101.2px] sm:mt-[96px] mb-10 relative"
+    >
+      <div class="p-6">
+        <div class="flex flex-row divide-x-2 divide-solid divide-black">
+            <!-- Images Section -->
+            <div class="w-full lg:w-1/2 mr-5">
+                <div class="grid grid-rows-3 grid-flow-col gap-4 justify-center items-center">
+                    <img src="images/market-images/shirt2.png" alt="Image 1" class="w-auto h-auto">
+                    <img src="images/market-images/shirt3.png" alt="Image 2" class="w-auto h-auto">
+                    <img src="images/market-images/shirt2.png" alt="Image 3" class="w-auto h-auto">
+                    <div class="row-span-3">
+                      <img src="images/market-images/shirt.png" alt="Image 4" class="w-auto h-auto">
+                    </div>
+                </div>
+            </div>
+            <!-- Details Section -->
+            <div class="w-full lg:w-1/2 p-5">
+                <h1 class="text-5xl font-bold mb-4">Polo Hitam Laki-Laki</h1>
+                <hr class="h-px w-2/3 bg-black border-0 dark:bg-gray-700">
+                <p class="text-3xl font-bold mt-2 mb-6">Rp.200.000</p>
+                <div class="mb-4">
+                    <h2 class="text-lg">Deskripsi</h2>
+                    <hr class="h-px w-2/3 bg-black border-0 dark:bg-gray-700 mt-1 mb-1">
+                    <p class="text-gray-700">
+                        <strong>Kategori:</strong> Pakaian & Aksesoris<br>
+                        <strong>Kondisi:</strong> Baru<br>
+                        <strong>Ukuran:</strong> S, M, L, XL, XXL<br>
+                    </p>
+                </div>
+                <p class="text-gray-700 mb-6 pr-72">
+                  Bahan 100% katun, penjahitan ganda dibagian bawah dan ujung, welt manset pada kerah, 
+                  made in indonesia. <span class="font-bold" id="dots">...</span> <span class="hidden" id="more"> Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
+                  Fusce sit amet orci vel purus feugiat convallis sed sed nisl. Donec lectus odio, posuere sed lacus in, molestie convallis magna. 
+                  Aliquam sollicitudin eros mauris, ac tristique justo volutpat non. Sed vitae tempor ante. Mauris viverra diam sit amet est ornare, 
+                  eu malesuada arcu tristique. Praesent sed dictum ipsum. </span> <button class="font-bold mb-2" onclick="readMoreFunction()" id="myBtn">Lihat Selengkapnya</button>
+                </p>
+                
+                <div class="flex flex-col w-1/3">
+                    <button class="mb-2 border-2 border-black rounded-3xl bg-white text-xl font-light py-4 hover:bg-gray-100 transition delay-100" onclick="location.href = '#'">
+                      <img class="inline mr-2 max-w-8 max-h-8" src="images/whatsapp2.svg" alt="Whatsapp"> Hubungi Penjual
+                    </button>
+                    <button class="mb-2 border-2 border-black rounded-3xl bg-white text-xl font-light py-4 hover:bg-gray-100 transition delay-100" onclick="location.href = '#'">
+                      <img class="inline mr-2 max-w-8 max-h-8" src="images/auction.svg" alt="Auction"> Buat Penawaran
+                    </button>
+                </div>
 
-    <!-- Scripts -->
+                <p class="font-light w-2/3 my-7"> *Berhati-hatilah dalam melakukan proses transaksi, Pastikan kembali sebelum membuat penawaran, membeli, dan menghubungi </p>
+
+                <h2 class="text-3xl font-light">Informasi Penjual</h2>
+                <hr class="h-px w-2/3 bg-black border-0 dark:bg-gray-700 mt-1 mb-1">
+                <div class="flex flex-row items-center">
+                  <div>
+                    <img class="w-20 h-20 rounded-full my-3 hover:border-2 hover:border-gray-300 transition delay-100 cursor-pointer" onclick="location.href = '/profile/pengguna-lain'" src="images/pictures/ex-img.png" alt="Profile Photo">
+                  </div>
+                  <div>
+                    <div class="flex flex-col ml-3">
+                      <div>
+                        <a class="font-semibold text-2xl hover:underline transition delay-100" href="/profile/pengguna-lain">Jordi Aksara Immanuel</a>
+                      <div>
+                        <div class="flex flex-row items-center">
+                          <div>
+                            <img class="w-4 h-auto max-w-10" src="images/svg/location_1.svg" alt="Location Icon">
+                          </div>
+                          <div>
+                            <p class="font-light text-lg ml-1">Yogyakarta</p>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>      
+        </div>
+      </div>
+
+    <!-- Footer -->
+    <footer class="mt-auto">
+      <div id="ftr-wrp">
+        <div
+          id="ftr"
+          class="grid grid-cols-1 grid-rows-1 gap-y-[2px] flex-col items-center bg-white text-white font-saira"
+        >
+          <div
+            id="top-ftr"
+            class="flex flex-row items-center justify-between pt-[15px] pb-3 px-2 sm:px-16 bg-black text-[10px] sm:text-[20px]"
+          >
+            <div
+              id="cstmr-srvc"
+              class="w-fit flex flex-row items-center justify-start"
+            >
+              <a href="/faq" class="leading-6">FAQ</a>
+              <h1 id="divider" class="mx-3 text-sm">|</h1>
+              <a href="/privacy" class="leading-6">Privacy Policy</a>
+              <h1 id="divider" class="mx-3 text-sm">|</h1>
+              <a href="/tos" class="leading-6">Terms & Condition</a>
+            </div>
+            <div id="c-right" class="w-auto flex justify-end items-center">
+              <h1>CopyRight © 2024 Sell&Buy</h1>
+            </div>
+          </div>
+          <div
+            id="bot-ftr"
+            class="flex flex-col sm:flex-row bg-black px-2 sm:px-16 py-3.5 sm:py-7 justify-between"
+          >
+            <div
+              id="cmpny"
+              class="w-1/2 sm:w-2/3 flex flex-col sm:flex-row justify-between sm:justify-start"
+            >
+              <img
+                src="images/footer-logo.png"
+                class="w-[150px] sm:w-[300px] mr-[5px]"
+              />
+              <span
+                class="flex flex-col justify-between items-start text-[10px] sm:text-[15px]"
+              >
+                <h1 class="flex align-top justify-start text-left">
+                  Alamat: Jl. Komojoyo No.16, Caturtunggal, Daerah Istimewa
+                  Yogyakarta
+                </h1>
+                <h1 class="flex align-top justify-start text-left">
+                  Phone: 0822-4671-3849
+                </h1>
+                <h1 class="flex align-top justify-start text-left">
+                  Email: sellandbuy@gmail.com
+                </h1>
+              </span>
+            </div>
+            <div
+              id="social"
+              class="w-1/2 sm:w-1/3 flex flex-row justify-between items-center"
+            >
+              <a href="#" class="flex items-center"
+                ><img src="images/instagram.png"
+              /></a>
+              <a href="#" class="flex items-center"
+                ><img src="images/whatsapp.png"
+              /></a>
+              <a href="#" class="flex items-center"
+                ><img src="images/linkedin.png"
+              /></a>
+              <a href="#" class="flex items-center"
+                ><img src="images/email.png"
+              /></a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </footer>
+
     <script>
-        document.addEventListener('DOMContentLoaded', () => {
-          function toggleMenu(event) {
-            const menu = document.getElementById('menu');
-            const isHidden = menu.classList.contains('hidden');
-            menu.classList.toggle('hidden', !isHidden);
-            menu.setAttribute('aria-expanded', !isHidden);
-            event.currentTarget.setAttribute('aria-expanded', !isHidden);
+    function toggleMenu(event) {
+          const menu = document.getElementById('menu');
+          const isHidden = menu.classList.contains('hidden');
+          menu.classList.toggle('hidden', !isHidden);
+          menu.setAttribute('aria-expanded', !isHidden);
+          event.currentTarget.setAttribute('aria-expanded', !isHidden);
+        }
+      
+        const menuButton = document.getElementById('menu-button');
+        menuButton.addEventListener('click', toggleMenu);
+      
+        document.addEventListener('click', (event) => {
+          const menu = document.getElementById('menu');
+          if (!menuButton.contains(event.target) && !menu.contains(event.target)) {
+            menu.classList.add('hidden');
+            menuButton.setAttribute('aria-expanded', 'false');
           }
+        });
+
+    function readMoreFunction() {
+      var dots = document.getElementById("dots");
+      var moreText = document.getElementById("more");
+      var btnText = document.getElementById("myBtn");
+
+      if (dots.style.display === "none") {
+        dots.style.display = "inline";
+        btnText.innerHTML = "Lihat Selengkapnya";
+        moreText.style.display = "none";
+      } else {
+        dots.style.display = "none";
+        btnText.innerHTML = "Lihat Lebih Sedikt";
+        moreText.style.display = "inline";
+      }
+    }
         
-          const menuButton = document.getElementById('menu-button');
-          menuButton.addEventListener('click', toggleMenu);
-        
-          document.addEventListener('click', (event) => {
-            const menu = document.getElementById('menu');
-            if (!menuButton.contains(event.target) && !menu.contains(event.target)) {
-              menu.classList.add('hidden');
-              menuButton.setAttribute('aria-expanded', 'false');
-            }
-          });
-        
-          const profileLink = document.getElementById('menu-item-0');
-          if (profileLink) {
-            profileLink.addEventListener('click', () => {
-              console.log('Profile link clicked');
-            });
-          }
-        });   
-      </script>
-  
-      <script src="js/script.js"></script>
-    </body>
-  </html>
-  
+
+    </script>
+
+    <script src="js/script.js"></script>
+  </body>
+</html>
